<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DzW-Qj-3wS">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Percent Encode-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="encode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="sXT-uU-huE">
                                <rect key="frame" x="20" y="64" width="335" height="286"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to encode" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nnf-8h-OVU">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="InputText" label="Input Text"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="MML-qs-cSi"/>
                                        </connections>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RFC 3986" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cs1-92-BAB">
                                        <rect key="frame" x="0.0" y="50" width="335" height="20.5"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxb-ex-Hpp">
                                        <rect key="frame" x="0.0" y="86.5" width="335" height="50"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="RFC3968Output"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="x-www-form-urlencoded" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y8M-eC-7kb">
                                        <rect key="frame" x="0.0" y="152.5" width="335" height="20.5"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHg-bs-pLK">
                                        <rect key="frame" x="0.0" y="189" width="335" height="50"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FormOutput"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ext-lv-CwX">
                                        <rect key="frame" x="0.0" y="255" width="335" height="31"/>
                                        <subviews>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="4uG-CM-ED2">
                                                <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="PlusSwitch"/>
                                                <connections>
                                                    <action selector="plusValueChangedWithSender:" destination="BYZ-38-t0r" eventType="valueChanged" id="fic-3S-UrC"/>
                                                </connections>
                                            </switch>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Replace spaces with &quot;+&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ghb-FD-FnL">
                                                <rect key="frame" x="57" y="0.0" width="278" height="31"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstAttribute="leadingMargin" secondItem="sXT-uU-huE" secondAttribute="leading" id="HCE-MG-OlD"/>
                            <constraint firstAttribute="trailingMargin" secondItem="sXT-uU-huE" secondAttribute="trailing" id="SqW-6N-Ktf"/>
                            <constraint firstAttribute="topMargin" secondItem="sXT-uU-huE" secondAttribute="top" id="T7Z-BH-AV0"/>
                        </constraints>
                        <edgeInsets key="layoutMargins" top="20" left="20" bottom="20" right="20"/>
                        <viewLayoutGuide key="safeArea" id="DxN-aJ-Pxn"/>
                    </view>
                    <navigationItem key="navigationItem" title="Percent Encode" id="7qw-ss-HGC"/>
                    <connections>
                        <outlet property="formOutput" destination="bHg-bs-pLK" id="oxl-1Z-BaJ"/>
                        <outlet property="plusSwitch" destination="4uG-CM-ED2" id="I8Z-LC-sOR"/>
                        <outlet property="rfc3986Output" destination="pxb-ex-Hpp" id="d2O-Kf-8dg"/>
                        <outlet property="textInput" destination="Nnf-8h-OVU" id="zYY-Sf-5Xh"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1442.4000000000001" y="445.72713643178412"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="H14-qt-4QQ">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DzW-Qj-3wS" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NpK-zi-7rn">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="0c6-oU-U3s"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="sIb-ak-cH7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="503.19999999999999" y="445.72713643178412"/>
        </scene>
    </scenes>
</document>
